2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	* configure.in: set HANDLE_LIBICAL_MEMORY to 1.

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #516408
	* calendar/e-cal-backend-exchange-calendar.c (add_ical),
	(create_object), (modify_object_with_href), (remove_object),
	(receive_objects), (get_free_busy):
	* calendar/e-cal-backend-exchange-tasks.c (get_changed_tasks),
	(receive_task_objects):
	* calendar/e-cal-backend-exchange.c (timeout_save_cache),
	(uncache), (get_object), (get_default_object), (get_timezone):
	* mail/mail-utils.c (mail_util_demangle_meeting_related_message): Free
	the memory returned by libical.

2008-02-21 Johnny Jacob <jjohnny@novell.com>
	
	Committed on behalf of Veerapuram Varadhan <vvaradhan@novell.com>

	** Fix for bug #432885

	* mail/mail-stub-exchange.c: (get_folder_info): Rescan the hierarchy - 
	as we don't rescan foreign hierarchies anywhere for mailer and only 
	when we are starting up.
	
2008-02-22  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #514836

	* addressbook/e-book-backend-gal.c: (member_populate):
	Obsoleting EVC_X_DEST_EMAIL and EVC_X_DEST_NAME and one leak fix.

2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* camel/camel-exchange-summary.c: (exchange_summary_class_init),
	(message_info_free): Free our message info members properly.

2008-02-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #516248

	* calendar/e-cal-backend-exchange.c: (open_calendar): Hier wont be
	available if we are offline. Same as bug #516252

2008-02-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #516250

	* addressbook/e-book-backend-gal.c: (build_contact_from_entry): Allow
	it to reauth if we are connecting after a offline.

2008-02-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #516252

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_connect): Determine that we are in offline if