@@ -1,5 +1,11 @@
 2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>
 
+	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects):
+	* calendar/e-cal-backend-exchange-tasks.c: (receive_task_objects): Free
+	the memory returned by e_cal_component_get_recurid_as_string.									   
+
+2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>
+
 	* configure.in: set HANDLE_LIBICAL_MEMORY to 1.
 
 2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>
